0.6.2 swagger user routes done
